added preprod instance

--- a/.github/workflows/actions-deploy-prod.yml
+++ b/.github/workflows/actions-deploy-prod.yml
@@ -115,6 +115,38 @@ jobs:
           simpleaccounts/simpleaccounts-frontend-uae:latest
           simpleaccounts/simpleaccounts-frontend-uae:${{ env.TAG }}
 
+  deploy-PROD-preprod:
+    needs: [build]
+    runs-on: datainn-digitalocean-test-runner-set
+    permissions:
+      contents: read
+      issues: write
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - uses: azure/setup-kubectl@v3
+      with:
+        version: 'latest' # default is latest stable
+      id: install-kubectl
+
+    - uses: azure/setup-helm@v3
+      with:
+        version: 'latest' # default is latest (stable)
+        token: ${{ secrets.GITHUB_TOKEN }} # only needed if version is 'latest'
+      id: install-helm
+
+    - name: Helm chart PROD preprod Deployment
+      run: |
+        echo "Deploying application to following cluster..."
+        kubectl cluster-info
+        echo "Test deployment scripts..."
+        helm upgrade --install --values ./simpleaccounts-frontend/values.yaml --set simpleVatFrontendRelease=$TAG,image.repository.frontend.tag=$TAG,image.repository.frontend.imageName=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},maindomain=preprod.app.simpleaccounts.io,simpleVatHost=https://preprod-api.app.simpleaccounts.io,fullnameOverride=preprod-frontend,serviceAccount.name=preprod-deploy-robot-frontend,ingress.hosts[0].host=preprod.app.simpleaccounts.io,ingress.hosts[0].paths[0]=/*,clusterIssuer=app-simpleaccounts-io-letsencrypt-prod,'ingress.annotations.cert-manager\.io/clusterissuer'=app-simpleaccounts-io-letsencrypt-prod,ingress.tls[0].secretName=preprod-app-simpleaccounts-io-tls,ingress.tls[0].hosts[0]=preprod-api.app.simpleaccounts.io,ingress.tls[0].hosts[1]=preprod.app.simpleaccounts.io --wait --dry-run --debug --namespace preprod --create-namespace preprod-frontend ./simpleaccounts-frontend 
+        echo "Deployment started scripts..."
+        helm upgrade --install --values ./simpleaccounts-frontend/values.yaml --set simpleVatFrontendRelease=$TAG,image.repository.frontend.tag=$TAG,image.repository.frontend.imageName=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},maindomain=preprod.app.simpleaccounts.io,simpleVatHost=https://preprod-api.app.simpleaccounts.io,fullnameOverride=preprod-frontend,serviceAccount.name=preprod-deploy-robot-frontend,ingress.hosts[0].host=preprod.app.simpleaccounts.io,ingress.hosts[0].paths[0]=/*,clusterIssuer=app-simpleaccounts-io-letsencrypt-prod,'ingress.annotations.cert-manager\.io/clusterissuer'=app-simpleaccounts-io-letsencrypt-prod,ingress.tls[0].secretName=preprod-app-simpleaccounts-io-tls,ingress.tls[0].hosts[0]=preprod-api.app.simpleaccounts.io,ingress.tls[0].hosts[1]=preprod.app.simpleaccounts.io --wait --namespace preprod --create-namespace preprod-frontend ./simpleaccounts-frontend 
+        echo "Application successfully deployed."
+
   deploy-PROD-dit:
     needs: [build]
     runs-on: datainn-digitalocean-test-runner-set
