--- a/.github/workflows/actions-deploy-prod.yml
+++ b/.github/workflows/actions-deploy-prod.yml
@@ -275,3 +275,35 @@ jobs:
         echo "Deployment started scripts..."
         helm upgrade --install --values ./simpleaccounts-frontend/values.yaml --set simpleVatFrontendRelease=$TAG,image.repository.frontend.tag=$TAG,image.repository.frontend.imageName=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},maindomain=sdgiconsultants.app.simpleaccounts.io,simpleVatHost=https://sdgiconsultants-api.app.simpleaccounts.io,fullnameOverride=sdgiconsultants-frontend,serviceAccount.name=sdgiconsultants-deploy-robot-frontend,ingress.hosts[0].host=sdgiconsultants.app.simpleaccounts.io,ingress.hosts[0].paths[0]=/*,clusterIssuer=app-simpleaccounts-io-letsencrypt-prod,'ingress.annotations.cert-manager\.io/clusterissuer'=app-simpleaccounts-io-letsencrypt-prod,ingress.tls[0].secretName=sdgiconsultants-app-simpleaccounts-io-tls,ingress.tls[0].hosts[0]=sdgiconsultants-api.app.simpleaccounts.io,ingress.tls[0].hosts[1]=sdgiconsultants.app.simpleaccounts.io --wait --namespace sdgiconsultants --create-namespace sdgiconsultants-frontend ./simpleaccounts-frontend 
         echo "Application successfully deployed."
+
+  deploy-PROD-cashin:
+    needs: [build]
+    runs-on: datainn-digitalocean-test-runner-set
+    permissions:
+      contents: read
+      issues: write
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - uses: azure/setup-kubectl@v3
+      with:
+        version: 'latest' # default is latest stable
+      id: install-kubectl
+
+    - uses: azure/setup-helm@v3
+      with:
+        version: 'latest' # default is latest (stable)
+        token: ${{ secrets.GITHUB_TOKEN }} # only needed if version is 'latest'
+      id: install-helm
+
+    - name: Helm chart PROD cashin Deployment
+      run: |
+        echo "Deploying application to following cluster..."
+        kubectl cluster-info
+        echo "Test deployment scripts..."
+        helm upgrade --install --values ./simpleaccounts-frontend/values.yaml --set simpleVatFrontendRelease=$TAG,image.repository.frontend.tag=$TAG,image.repository.frontend.imageName=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},maindomain=cashin.app.simpleaccounts.io,simpleVatHost=https://cashin-api.app.simpleaccounts.io,fullnameOverride=cashin-frontend,serviceAccount.name=cashin-deploy-robot-frontend,ingress.hosts[0].host=cashin.app.simpleaccounts.io,ingress.hosts[0].paths[0]=/*,clusterIssuer=app-simpleaccounts-io-letsencrypt-prod,'ingress.annotations.cert-manager\.io/clusterissuer'=app-simpleaccounts-io-letsencrypt-prod,ingress.tls[0].secretName=cashin-app-simpleaccounts-io-tls,ingress.tls[0].hosts[0]=cashin-api.app.simpleaccounts.io,ingress.tls[0].hosts[1]=cashin.app.simpleaccounts.io --wait --dry-run --debug --namespace cashin --create-namespace cashin-frontend ./simpleaccounts-frontend 
+        echo "Deployment started scripts..."
+        helm upgrade --install --values ./simpleaccounts-frontend/values.yaml --set simpleVatFrontendRelease=$TAG,image.repository.frontend.tag=$TAG,image.repository.frontend.imageName=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},maindomain=cashin.app.simpleaccounts.io,simpleVatHost=https://cashin-api.app.simpleaccounts.io,fullnameOverride=cashin-frontend,serviceAccount.name=cashin-deploy-robot-frontend,ingress.hosts[0].host=cashin.app.simpleaccounts.io,ingress.hosts[0].paths[0]=/*,clusterIssuer=app-simpleaccounts-io-letsencrypt-prod,'ingress.annotations.cert-manager\.io/clusterissuer'=app-simpleaccounts-io-letsencrypt-prod,ingress.tls[0].secretName=cashin-app-simpleaccounts-io-tls,ingress.tls[0].hosts[0]=cashin-api.app.simpleaccounts.io,ingress.tls[0].hosts[1]=cashin.app.simpleaccounts.io --wait --namespace cashin --create-namespace cashin-frontend ./simpleaccounts-frontend 
+        echo "Application successfully deployed."
