--- a/simpleaccounts-frontend/values.yaml
+++ b/simpleaccounts-frontend/values.yaml
@@ -89,7 +89,8 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: {}
+nodeSelector:
+  doks.digitalocean.com/node-pool: simpleaccounts-node-pool-1
 
 tolerations: []
 
