--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "ag-grid-react": "^26.1.0",
     "apexcharts": "^3.26.3",
     "axios": "^0.21.1",
-    "convert-array-to-csv": "^2.0.0",
     "base-64": "^0.1.0",
     "base64-js": "^1.3.1",
     "bootstrap": "^4.6.0",
@@ -26,6 +25,7 @@
     "chart.js": "^2.8.0",
     "classnames": "^2.3.1",
     "codemirror": "^5.47.0",
+    "convert-array-to-csv": "^2.0.0",
     "core-js": "^3.13.0",
     "crypto-js": "^3.1.9-1",
     "downloadjs": "^1.4.7",
@@ -42,8 +42,8 @@
     "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
     "moment": "2.24.0",
-    "papaparse": "^5.3.2",
     "node-sass": "^4.0.0",
+    "papaparse": "^5.3.2",
     "prop-types": "^15.7.2",
     "rasterizehtml": "^1.3.0",
     "react": "^16.8.6",
@@ -71,6 +71,7 @@
     "react-ladda": "6.0.0",
     "react-loader-spinner": "^3.1.5",
     "react-localization": "^1.0.16",
+    "react-multi-email": "^1.0.23",
     "react-number-format": "^4.5.5",
     "react-password-checklist": "^1.1.1",
     "react-phone-input-2": "^2.14.0",
