--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@mui/material": "^5.3.1",
+    "@mui/x-data-grid": "^6.19.6",
     "@progress/kendo-drawing": "^1.6.0",
     "@progress/kendo-react-pdf": "^3.11.0",
     "@react-pdf/renderer": "^1.6.8",
