git add env variables

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ GENERATE_SOURCEMAP=false
 SIMPLEVAT_HOST=http://localhost:8080
 SKIP_PREFLIGHT_CHECK=true
 SIMPLEVAT_RELEASE=Unknown
+SIMPLE_SERVICES_HOST=https://simpleaccounts-azure-function-app.azurewebsites.net
+SIMPLE_SERVICES_API_KEY=l-KoYPnH9ok9i1N4COfips8AhyzrKW1ec4cEec3tLmcfAzFu5aXqiQ==
